docs: ✍️ Add assumptions and limitations document
- Create a comprehensive document outlining key assumptions and limitations related to the Brent oil price change point analysis.
- Address data quality, model assumptions, analytical limitations, and external factors not considered.
- Provide recommendations for users on how to interpret results and communicate findings effectively.

docs: ✍️ Establish communication channels and stakeholder engagement strategy

- Develop a detailed communication strategy for disseminating findings from the Brent oil change point analysis.
- Identify primary and secondary stakeholder groups with tailored communication approaches.
- Outline various communication channels, including reports, dashboards, webinars, and public engagement methods.

--- a/.gitignore
+++ b/.gitignore
@@ -219,7 +219,7 @@ __marimo__/
 # Project-specific ignores
 
 # Docs and related files
-/docs
+/docs/*.md
 copilot-instructions.md
 
 # Data files (keep directory structure, ignore actual data)
