feat(api): ✨ Add API routes for changepoint and data
- Implemented changepoint_routes for accessing detected change points.
- Created data_routes for historical Brent oil price data.
- Added event_routes for geopolitical and economic events impacting oil prices.
- Introduced services for handling business logic related to changepoints, data, and events.
- Added configuration management for different environments.
- Included unit tests for services to ensure functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,8 @@ Thumbs.db
 *.swp
 *.swo
 *~
+
+# Dashboard environment files
+dashboard/backend/.env
+dashboard/frontend/.env
+dashboard/frontend/.env.local
